--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <div class="row">
             <div class="col-12 col-xl-7 bg-warning-subtle order-0 order-xl-1 opened-email full-height">  <p ><span><h3>Dear Supporter:</h3></span>
                   <h4>Together we can reverse the extinction projectory. The future <span><em>of the future</em></span> is in your hands! All donations received by tonight at midnight <span><strong>will be matched.</strong></span></h4></p>
-               <!--<div class="turtle"><img turtle src="https://images.pexels.com/photos/3150271/pexels-photo-3150271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                width="auto" height="auto" alt="endangered turtle"></div>-->
-         
+                  <div class="d-none d-xl-block"> <img  turtle src="https://images.pexels.com/photos/3150271/pexels-photo-3150271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                width="100%" height="me-2" alt="endangered turtle">
+            </div> 
                 <a class="btn btn-danger btn-lg my-2" href="https://reviverestore.org/" role="button">Donate</a>
                    
                     <div class="form-group">
